test/conformance/chainsaw/generating-policies/clone/sync/update-policy-to-disable-sync/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clone-update-policy-to-disable-sync
