test/conformance/chainsaw/generating-policies/clone/sync/update-policy-to-disable-sync/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: GeneratingPolicy
metadata:
  name: clone-update-policy-to-disable-sync
spec:
  evaluation:
    synchronize:
      enabled: true
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["namespaces"]
  variables:
    - name: nsName
      expression: "object.metadata.name"
    - name: source
      expression: resource.get("v1", "secrets", "default", "clone-update-policy-to-disable-sync")
  generate:
    - expression: generator.apply(variables.nsName, [variables.source])
