test/conformance/chainsaw/generating-policies/clone/sync/update-policy-to-disable-sync/source.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: clone-update-policy-to-disable-sync
  namespace: default
type: Opaque
