test/conformance/chainsaw/generating-policies/clone/sync/update-policy-to-disable-sync/downstream-assert.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: clone-update-policy-to-disable-sync
  namespace: clone-update-policy-to-disable-sync
type: Opaque
