test/conformance/chainsaw/generating-policies/clone/sync/update-policy-to-disable-sync/downstream-error.yaml
apiVersion: v1
kind: Secret
metadata:
  name: clone-update-policy-to-disable-sync
  namespace: clone-update-policy-to-disable-sync
