test/conformance/chainsaw/generating-policies/clone/sync/update-policy-to-disable-sync/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: clone-update-policy-to-disable-sync
spec:
  steps:
  - name: create permissions
    try:
    - apply:
        file: permissions.yaml
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-generating-policy-ready
    use:
      template: ../../../../_step-templates/generating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: clone-update-policy-to-disable-sync
  - name: create the source
    try:
    - apply:
        file: source.yaml
  - name: create the trigger
    try:
    - apply:
        file: namespace.yaml
  - name: check that the downstream is generated
    try:
    - assert:
        file: downstream-assert.yaml
        timeout: 30s
  - name: modify the source
    try:
    - apply:
        file: source-modified.yaml
  - name: check that the downstream is updated
    try:
    - assert:
        file: updated-downstream-assert.yaml
        timeout: 30s
  - name: update policy to disable sync
    try:
    - apply:
        file: policy-modified.yaml
  - name: delete the downstream
    try:
    - delete:
        ref:
          apiVersion: v1
          kind: Secret
          name: clone-update-policy-to-disable-sync
          namespace: clone-update-policy-to-disable-sync
  - name: check that the downstream is not re-generated
    try:
    - error:
        file: downstream-error.yaml
